--- a/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
+++ b/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
@@ -88,13 +88,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Features\ESP\ExtractEsp.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Colors.cs" />
+    <Compile Include="Utils\GameUtils.cs" />
     <Compile Include="Utils\Render.cs" />
+    <Compile Include="Utils\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Features\ESP\" />
     <Folder Include="Menu\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
