--- a/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
+++ b/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
@@ -91,11 +91,14 @@
     <Compile Include="Features\ESP\ExtractEsp.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="Options\AimbotOptions.cs" />
+    <Compile Include="Options\ItemOptions.cs" />
+    <Compile Include="Options\MiscOptions.cs" />
+    <Compile Include="Options\PlayerOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\Colors.cs" />
     <Compile Include="Utils\GameUtils.cs" />
     <Compile Include="Utils\Render.cs" />
-    <Compile Include="Utils\Settings.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Menu\" />
