--- a/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
+++ b/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Options\PlayerOptions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\GameUtils.cs" />
+    <Compile Include="Utils\RayCast.cs" />
     <Compile Include="Utils\Render.cs" />
   </ItemGroup>
   <ItemGroup />
