--- a/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
+++ b/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Data\GameLootItem.cs" />
     <Compile Include="Data\GamePlayer.cs" />
     <Compile Include="Features\ESP\GrenadeEsp.cs" />
+    <Compile Include="Features\Memes.cs" />
     <Compile Include="TestHook.cs" />
     <Compile Include="Enums\HumanBones.cs" />
     <Compile Include="Features\Aimbot.cs" />
