--- a/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
+++ b/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Access.cs" />
     <Compile Include="Data\GameExtractPoint.cs" />
     <Compile Include="Data\GameFullBright.cs" />
+    <Compile Include="Data\GameThrowable.cs" />
     <Compile Include="Data\GameLootContainer.cs" />
     <Compile Include="Data\GameLootItem.cs" />
     <Compile Include="Data\GamePlayer.cs" />
