optmized CorpseESP I think and a few other changes.

--- a/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
+++ b/SivaEftCheat/SivaEftCheat/SivaEftCheat.csproj
@@ -113,6 +113,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Access.cs" />
+    <Compile Include="Data\GameCorpse.cs" />
     <Compile Include="Data\GameExtractPoint.cs" />
     <Compile Include="Data\GameFullBright.cs" />
     <Compile Include="Data\GameThrowable.cs" />
