--- a/Citadel/CitadelEFT/CitadelEFT.csproj
+++ b/Citadel/CitadelEFT/CitadelEFT.csproj
@@ -95,7 +95,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Assembly-CSharp">
+    <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>E:\Software\de4dot\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Comfort">
